<resources>
    <string name="app_name">AppLabo3</string>
    <string name="emailTitleID">Mail</string>
    <string name="callTitleID">Call</string>
    <string name="searchTitleID">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_child">ChildActivity</string>
    <string name="childBtnText">Go to child</string>
    <string name="txtName">Name :</string>
    <string name="txtAge">Age</string>
</resources>
